# AiGentsy-Protocol

./: .gitignore  AIGENTSY_KEY_DIRECTORY_STRONG_LEVEL_1_82Q_D.md  AIGENTSY_SPEC3_ACTOR_SIGNATURE_SIDECAR_82Q_A.md  LICENSE  PROOFPACK_REUSE.md  README.md  requirements.txt
adapters/: autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  marketplace_adapter.py  mcp_server.py  openai_adapter.py  vercel_ai_adapter.py
aigentsy-langgraph/: README.md  pyproject.toml
aigentsy-langgraph/examples/: basic_graph.py
aigentsy-langgraph/src/aigentsy_langgraph/: __init__.py  client.py  nodes.py
data/: conformance_vectors.json  delta_savings_curve.json  hoverstack_priors.json  hoverstack_priors_v13.json  hoverstack_priors_v13_coldstart.json  hoverstack_v13_results_reference.json  proof_reuse_conformance_vectors.json  protocol_docs.md  protocol_endpoint_spec.json  settlement_conformance_vectors.json  sku_catalog_v2.json  v15_wave1_conformance_vectors.json  v15_wave1_results.json  v15_wave2_conformance_vectors.json  v15_wave2_results.json  v16_delta_reuse_conformance_vectors.json  v16_delta_reuse_results.json
docs/: gate_and_prove.md
examples/: hello_e2e.py
hoverstack/: APEX_ROADMAP.md  CUDA_RUNBOOK.md  GOVERNED_ECONOMIC_PROOF_V1.md  VLLM_BRIDGE.md  VLLM_DEPLOY.md  __init__.py  bench_delta_curve.py  bench_delta_curve_report.py  delta_plane.py  risk_plane.py
protocol/: AGREEMENT_GRAPH_V1.md  CAPABILITY_RESOURCE_GRAPH_V1.md  CONSEQUENCE_GRAPH_V1.md  COORDINATION_GRAPH_V1.md  LINEAGE_GRAPH_V1.md  MANDATE_GRAPH_V1.md  OFFER_INTENT_GRAPH_V1.md  ORGANIZATION_GRAPH_V1.md  TRUST_PROFILE_V1.md  VALUE_FLOW_GRAPH_V1.md  __init__.py  acceptance_policy.py  agreement_graph.py  bundle_spec.py  capability_resource_graph.py  consequence_graph.py  coordination_graph.py  cross_protocol_bridge.py  events.py  executable_sla.py  federated_log.py  id_policy.py  idempotency.py  lineage_graph.py  lock_backend.py  mandate_graph.py  merkle_log.py  offer_intent_graph.py  organization_graph.py  programmable_mandate.py  proof_chain.py  proof_export.py  provider_capabilities.py  reputation_attestation.py  settlement_instruction.py  settlement_policy.py  sth_anchor.py  sth_anchor_api.py  trust_profile.py  value_flow_graph.py  (+1 more)
sdk/aigentsy/: README.md  pyproject.toml
sdk/aigentsy/src/aigentsy/: __init__.py  cli.py  client.py  gate.py
sdk/aigentsy/tests/: test_gate_and_prove.py
sdk/js/: README.md  index.d.ts  index.js  package.json
sdk/mcp/: .gitignore  AIGENTSY_MCP_CONSEQUENCE_MIDDLEWARE_82J.md  AIGENTSY_SPEC_3_PER_ACTOR_INFERENCE_BUNDLE_PLAN.md  LICENSE  README.md  pyproject.toml
sdk/mcp/src/aigentsy_mcp/: __init__.py  __main__.py  client.py  server.py
sdk/mcp/tests/: smoke_test.py  test_aigentsy_gate.py  test_inference_evaluate_tool.py
sdk/python/: client.py
sdk/verify/: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
sdk/verify/examples/: verify_attestation.py  verify_bundle.py
sdk/verify/src/aigentsy_verify/: __init__.py  __main__.py  anchor.py  attestation.py  bundle.py  cli.py  keys.py  merkle.py  policy_layer.py  session.py
sdk/verify/tests/: test_bundle_actor_sidecar.py  test_cli.py  test_verify.py
sdk/verify/tests/fixtures/: sample_actor_keypair.json  sample_attestation.json  sample_bundle.json  sample_bundle_with_actor_sigs.json  sample_bundle_with_sidecar_and_directory.json  sample_key.json
tests/conformance/: test_accretive_stack.py  test_adapted_patterns.py  test_agreement_graph.py  test_apex_governance.py  test_apex_staircase.py  test_benchmark_activation.py  test_budget_enforcement.py  test_capability_resource_graph.py  test_carrying_cost_identity.py  test_compute_governance.py  test_consequence_graph.py  test_coordination_graph.py  test_delta_within_reuse.py  test_gep_auto_emission.py  test_gep_v11_ed25519.py  test_governed_economic_proof.py  test_hardening.py  test_hoverstamp_attachment.py  test_lineage_graph.py  test_mandate_graph.py  test_memory_plane_identity.py  test_merkle_log.py  test_model_routing.py  test_negative_cache.py  test_offer_intent_graph.py  test_organization_graph.py  test_pre_approval.py  test_priors_persistence.py  test_privacy.py  test_proof_reuse.py  test_protocol_core.py  test_protocol_wave2.py  test_protocol_wave3.py  test_risk_restricted_tuning.py  test_runtime_priors.py  test_shape_policy_memory.py  test_trust_profile.py  test_value_flow_graph.py  test_wedge_economics.py
tests/conformance/portable/: test_settlement_vectors.py
