[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigentsy"
version = "1.6.2"
description = "ProofPack creation, offline verification, acceptance-gated settlement coordination, and SDK primitives for agent commerce."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AiGentsy", email = "admin@aigentsy.com" },
]
keywords = [
    "aigentsy", "settlement", "proof", "agent", "protocol",
    "verification", "ai", "merkle", "transparency-log",
    "attestation", "credential", "webhook", "staking", "netting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.scripts]
aigentsy = "aigentsy.cli:main"

[project.optional-dependencies]
# Pin the offline verifier to the current PUBLIC PyPI release (1.5.0). Note: the
# in-repo source mirror at sdk/verify is a stale checkout (its pyproject says
# 1.2.1); `pip install aigentsy[verify]` fetches the published 1.5.0 wheel, which
# is the behavior gate_and_prove depends on. See README "Verifier version" note.
verify = ["aigentsy-verify>=1.5.0"]
langgraph = ["aigentsy-langgraph>=0.1"]
langchain = ["langchain-core>=0.1"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://aigentsy.com"
Repository = "https://gitlab.com/AiGentsy/aigentsy-ame-runtime"
Documentation = "https://aigentsy.com/data/protocol_docs.md"
Quickstart = "https://aigentsy.com/quickstart"
"Trust Center" = "https://aigentsy.com/trust"

[tool.hatch.build.targets.wheel]
packages = ["src/aigentsy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
