[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigentsy-mcp"
version = "1.2.1"
description = "MCP server for the AiGentsy Settlement Protocol — proof, verification, and exactly-once settlement tools for Claude Desktop, Cursor, Cline, and any MCP-compatible runtime."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AiGentsy", email = "admin@aigentsy.com" },
]
keywords = [
    "mcp", "model-context-protocol", "aigentsy", "settlement", "proof",
    "agent", "protocol", "verification", "claude", "cursor", "cline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.scripts]
aigentsy-mcp = "aigentsy_mcp.server:main"

[project.urls]
Homepage = "https://aigentsy.com"
Documentation = "https://aigentsy.com/integrations#mcp"
Repository = "https://github.com/AiGentsyProtocol/aigentsy-protocol"
Issues = "https://github.com/AiGentsyProtocol/aigentsy-protocol/issues"
"Trust Center" = "https://aigentsy.com/trust"

[tool.hatch.build.targets.wheel]
packages = ["src/aigentsy_mcp"]
