[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigentsy-verify"
version = "1.1.0"
description = "Standalone offline verification for AiGentsy ProofPack v2 bundles, attestations, and policy_layer display"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AiGentsy", email = "admin@aigentsy.com" },
]
keywords = ["aigentsy", "verification", "proof-bundle", "merkle", "ed25519", "transparency-log"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://aigentsy.com"
Repository = "https://gitlab.com/AiGentsy/aigentsy-ame-runtime"
Documentation = "https://aigentsy.com/data/proof_bundle_spec.md"
"Public Key" = "https://aigentsy-ame-runtime.onrender.com/protocol/merkle/public-key"
"Trust Center" = "https://aigentsy.com/trust"

[tool.hatch.build.targets.wheel]
packages = ["src/aigentsy_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
